--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 			<h3>John Connor</h3>
 			<div class="tarjeta">
 				<div class="img-perfil">
-			<img src="../../Documents/Diseño Web II/startrap/img/team-john.jpg" class="img-fluid" alt="john">
+			<img src="img/team-john.jpg" class="img-fluid" alt="john">
 				</div>
 				<h4> Web Developer</h4>
 				<p>Lorem ipsum dolor sit amet consectetur adipiscing elit in pulvinar amet consectetur amet adipiscing elit.</p>
@@ -211,7 +211,7 @@
 			<h3>Emma Memmel</h3>
 			<div class="tarjeta">
 				<div class="img-perfil">
-			<img src="../../Documents/Diseño Web II/startrap/img/team-emma.jpg" class="img-fluid" alt="john">
+			<img src="img/team-emma.jpg" class="img-fluid" alt="john">
 				</div>
 				<h4>Saless Manager</h4>
 				<p>Lorem ipsum dolor sit amet consectetur adipiscing elit in pulvinar amet consectetur amet adipiscing elit.</p>
@@ -234,7 +234,7 @@
 			<h3>Eric Fanciulli</h3>
 			<div class="tarjeta">
 				<div class="img-perfil">
-			<img src="../../Documents/Diseño Web II/startrap/img/team-jacob.jpg" class="img-fluid" alt="john">
+			<img src="img/team-jacob.jpg" class="img-fluid" alt="john">
 				</div>
 				<h4> Web Designer</h4>
 				<p>Lorem ipsum dolor sit amet consectetur adipiscing elit in pulvinar amet consectetur amet adipiscing elit.</p>
